SERVER-5663, SERVER-2942 MapViewOfFileEx backport

Backport the fixes for Windows memory-mapped files made in
2.1.x into the 2.0.x branch.  Stop using VirtualProtect in
remapPrivateView, use UnmapViewOfFile and MapViewOfFileEx
to refresh the private view of the memory-mapped file.
Place memory-mapped files at a high address in 64-bit to
get out of the way of allocations made by Windows.